# rakas_cookbook

./: README.md
c++/: .clang-tidy  .gitignore  CMakeLists.txt  Dependencies.cmake  README.md
c++/src/: CMakeLists.txt  basic_adder.cpp  file_operations.cpp  string_operations.cpp
c++/src/cli/: CMakeLists.txt
c++/src/hello_world/: main.cpp
example_data/: data.json  data.yml
go/: README.md  go.mod
go/hello/: go.mod
go/tcp/: go.mod  main.go
python/: README.md  cli.py  hello.py
rust/: README.md
rust/src/: hello_world.rs
